--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,7 @@
                     <!-- Left side: Logo and main navigation links -->
                     <ul>
                         <li>
-                            <strong><a href="{% url 'homepage' %}">VUOJ</a></strong>
+                            <strong><a href="{% url 'homepage' %}">VUJudge</a></strong>
                         </li>
                         <li>
                             <a href="{% url 'contests' %}">Contests</a>
