--- a/templates/judge/homepage.html
+++ b/templates/judge/homepage.html
@@ -6,7 +6,7 @@
         <p>
             Hello, This is varendra University Online Judge.
             <br>
-            Made with Django and Judge0.
+            Made with Django and Piston.
         </p>
     </hgroup>
 {% endblock %}
