--- a/templates/judge/contests/detail.html
+++ b/templates/judge/contests/detail.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}{{ contest.name }} - VUOJ{% endblock %}
+{% block title %}{{ contest.name }}{% endblock %}
 {% block content %}
     <!-- templates/contest_detail.html -->
     <h1>{{ contest.name }}</h1>
@@ -19,6 +19,11 @@
             <span style="color: orange;">Finished</span>
         {% endif %}
     </p>
+<p>
+    <a href="{% url 'contest_leaderboard' contest.id %}">
+                <button>Leaderboard</button>
+            </a>
+</p>
     {% if contest.status == "R" %}
         <p>
             <strong>Time Left:</strong>
@@ -30,19 +35,14 @@
             {{ time_left }}
         </p>
     {% endif %}
-    <h2>Problems</h2>
+    <h2 style="text-align: center; vertical-align: middle;">Problems</h2>
     {% if problems and contest.status != "N" %}
         <table>
-            <tr>
-                <td>Problem Title</td>
-                <td>Difficulty</td>
-            </tr>
             {% for problem in problems %}
                 <tr>
-                    <td>
+                    <td style="text-align: center; vertical-align: middle;">
                         <a href="{% url 'problem_detail' contest.id problem.id %}">{{ problem.name }}</a>
                     </td>
-                    <td>{{ problem.get_difficulty_display }}</td>
                 </tr>
             {% endfor %}
         </table>
