--- a/templates/judge/problems/detail.html
+++ b/templates/judge/problems/detail.html
@@ -21,7 +21,8 @@
 }
 
     </style>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.4.12/ace.js"></script>
+    {% load static %}
+    <script src="{% static 'js/ace.js' %}"></script>
     <!-- templates/problem_detail.html -->
     <div style="display: flex;">
         <!-- Modal -->
@@ -76,12 +77,16 @@
         <div id="menu" style="width: 20%; justify-content: space-around;">
             <h3>Menu</h3>
             <a id="open_modal" href="#">
+                <button>Submit OnPage</button>
+            </a>
+            <a href="{% url 'problem_submit_get' contest.id problem.id %}">
                 <button>Submit</button>
             </a>
             <br>
             <a href="{% url 'problem_submit' contest.id problem.id %}">
                 <button>Your Submissions</button>
             </a>
+
         </div>
     </div>
     <script>
